Conan the Barber

--- a/ConanTheBarbarian/ConanTheBarbarian.html
+++ b/ConanTheBarbarian/ConanTheBarbarian.html
@@ -17,59 +17,59 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian001.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian002.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian003.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian004.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian005.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian006.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian007.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian008.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian009.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian010.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian011.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian012.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian013.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian014.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian015.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian016.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian017.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian018.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian019.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian020.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian021.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian022.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian023.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian024.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian025.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian026.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian027.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian028.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian029.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian030.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian031.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian032.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian033.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian034.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian035.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian036.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian037.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian038.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian039.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian040.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian041.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian042.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian043.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian044.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian045.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian046.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian047.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian048.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian049.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian050.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian051.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian052.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian001.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian002.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian003.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian004.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian005.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian006.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian007.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian008.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian009.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian010.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian011.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian012.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian013.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian014.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian015.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian016.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian017.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian018.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian019.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian020.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian021.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian022.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian023.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian024.jpg" title="cover by Barry Smith"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian025.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian026.jpg" title="cover by John Buscema"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian027.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian028.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian029.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian030.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian031.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian032.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian033.jpg" title="cover by John Romita"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian034.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian035.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian036.jpg" title="cover by John Romita"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian037.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian038.jpg" title="cover by Gil Kane, John Romita"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian039.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian040.jpg" title="cover by Rich Buckler"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian041.jpg" title="cover by Gil Kane, John Romita"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian042.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian043.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian044.jpg" title="cover by John Buscema"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian045.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian046.jpg" title="cover by John Buscema"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian047.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian048.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian049.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian050.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian051.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian052.jpg" title="cover by John Buscema"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian053.jpg" title="cover by Gil Kane"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian054.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian055.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanTheBarbarian056.jpg"></div>
