--- a/ConanTheBarbarian/ConanTheBarbarian001.html
+++ b/ConanTheBarbarian/ConanTheBarbarian001.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h2>Conan the Barbarian</h2>
+<h2>Conan the Barbarian #1</h2>
 <img src="ConanTheBarbarian001.jpg"><br>
 Illustrations: Barry Windsor-Smith, John Verpoorten, Dan Adkins<br> 
 Script by Roy Thomas<br>
