--- a/AmericanFlagg/AmericanFlagg.html
+++ b/AmericanFlagg/AmericanFlagg.html
@@ -60,7 +60,20 @@ Writer &anp; Illustrator: Howard Chaykin<br>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg38.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg39.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg41.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198801.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198802.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198803.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198804.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198805.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198806.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198807.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198808.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198809.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198810.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198811.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFlagg198812.jpg"></div>
+
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
