--- a/AstonishingTales/AstonishingTales.html
+++ b/AstonishingTales/AstonishingTales.html
@@ -2,24 +2,72 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Astonishing Tales</title>
 </head>
 
 <body>
-<h2>Astonishing Tales</h2>
-<img src="AstonishingTales.jpg">
-<img src="AstonishingTales031.jpg"> <br>
-Series: on-going<br>
-Illustrator: Jack Kirby, Marie Severin, Bill Everett<br>
-Writer: Stan Lee <br>
-Publisher: 1970 Marvel<br>
+<img src="AstonishingTales01.jpg" title="cover by Marie Severin"><br>
+36 issues 1970-1976 by Marvel
 <p>
-About: Astonishing Tales began as a split title with solo features starring the jungle lord Ka-Zar and the supervillain and monarch Doctor Doom in 10–page stories each. The latter feature was dropped after issue #8 (Oct. 1971).
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales01.jpg" title="cover by Marie Severin"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstonishingTales36.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
+Astonishing Tales began as a split title with solo features starring the jungle lord Ka-Zar and the supervillain and monarch Doctor Doom, 10 page stories each. The latter feature was dropped after issue #8 (Oct. 1971) but Ka-Zar featured from issue #1-20.
 </p><p>
 The creative team of "Doctor Doom" was initially composed of writer Roy Thomas and penciler-inker Wally Wood, a veteran of 1950s EC Comics stories and one of the early, signature artists of Daredevil. Wood remained as artist through issue #4 (Feb. 1971), succeeded by penciler George Tuska for two issues and Gene Colan for the final two. Larry Lieber was writer for #3–6, succeeded by Gerry Conway.
 </p><p>
-Story: Kraven the Hunter sets his sights on capturing Zabu, knocking out Ka-Zar in the process and then returning to New York with Zabu as his captive. Continued from X-MEN #63. 
+Issue #1 story: Kraven the Hunter sets his sights on capturing Zabu, knocking out Ka-Zar in the process and then returning to New York with Zabu as his captive. Continued from X-MEN #63. 
+</p><p>
+Issues #21-24 features 'IT the Living Colossus' and issues #25-36 feature Deathlock.
 </p>
+
 </body>
 </html>
