--- a/ArtOps/ArtOps.html
+++ b/ArtOps/ArtOps.html
@@ -2,18 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>ArtOps</title>
 </head>
 
 <body>
-<h2>ArtOps</h2>
-<img src="ArtOps.jpg"> <br>
-Series: on-going, 12 issues<br>
+<img src="ArtOps01.jpg"> <br>
+12 issues, 2015-2016 by Vertigo (DC)<br>
 Illustrator: Michael Allred and Eduardo Risso<br>
 Writer: Shawn Simon<br>
-Publisher: 2015 Vertigo (DC)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ArtOps01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArtOps12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 In this new series, art not only imitates life, it becomes it! When rogue figures from famous works of art come to life and escape their frames, it's up to Reggie Riot and the agents of Art Operatives to track them down before they wreak havoc on the unsuspecting public. But Reggie has secrets of his own that may affect his ability to interact with these living works of art, and he wants no part in the agency his mother ran before him. Pop culture will never be the same. 
 </p>
 </body>
