--- a/Astonishing/Astonishing.html
+++ b/Astonishing/Astonishing.html
@@ -2,21 +2,95 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Astonishing</title>
 </head>
 
 <body>
-<h2>Astonishing</h2>
-<img src="Astonishing.jpg"> <br>
-Series: on-going, #3-63<br>
-Illustrator: Bill Everett, Stan Goldberg<br>
-Writer: Bill Everett<br>
-Publisher: 1951 Atlas (Marvel)<br>
+<img src="Astonishing03.jpg"> <br>
+60 issues, #3-63 in 1951 by Atlas (later Marvel)<br>
+Written and llustrated by Bill Everett<br>
 <p>
-Numbering continues from Marvel Boy #2.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Astonishing03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Astonishing63.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Mister Death!, script and art by Bill Everett; Marvel Boy battles a Islamic confidence artist. The Runaway Planet, script and art by Bill Everett; Marvel Boy prevents an invasion of Uranus by Satana. Time-Bomb Terror!, script and art by Bill Everett; Marvel Boy investigates a gangster's connections to international communism.
+Numbering continues from Marvel Boy #2. First issue (#3) stories include:<br>
+<li>Mister Death! Marvel Boy battles a Islamic confidence artist.
+<li>The Runaway Planet. Marvel Boy prevents an invasion of Uranus by Satana.
+<li>Time-Bomb Terror! Marvel Boy investigates a gangster's connections to international communism.
 </p>
+
 </body>
 </html>
