--- a/4KidsWalkIntoABank/4KidsWalkIntoABank.html
+++ b/4KidsWalkIntoABank/4KidsWalkIntoABank.html
@@ -2,18 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>4 Kids Walk Into A Bank</title>
 </head>
 
 <body>
-<h2>4 Kids Walk Into A Bank</h2>
-<img src="4KidsWalkIntoABank.jpg"> <br>
-Series: 5 issue mini series<br>
-Writer: Matthew Rosenberg<br>
+<img src="4KidsWalkIntoABank01.jpg"> <br>
+5 issue mini series in 2017  by Black Mask Studios<br>
 Illustrator: Tyler Boss<br>
-Publisher: 2017 Black Mask Studios<br>
+Writer: Matthew Rosenberg
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4KidsWalkIntoABank13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Matthew Rosenberg and Tyler Boss’ wildly inventive and fearless tale of adolescents facing adult realities shipped just two of its five issues in 2017, but we can’t deny how well the creative team stuck the landing. The book thrives off sharp characterization, coupled with Tyler Boss’ pin-point facial expressions and hilarious fantasy sequences, and an impending darkness lurking behind it all. 
 </p><p>
 Within this mini-series from publisher Black Mask, childhood friends Paige, Pat, Berger and Walter hatch a plan to steal cash to pay off a group of thieves intimidating Paige’s father. The inherent clever oozing out of these panels is breathy and rhythmic, probably obscuring the fact that this work was meticulous labor that took years to complete. Like a gorgeous remix of ‘80s nostalgia art directed by visual icon Saul Bass, 4 Kids Walk Into a Bank ultimately ventured into our hearts.
