--- a/4KidsWalkIntoABank/4KidsWalkIntoABank.html
+++ b/4KidsWalkIntoABank/4KidsWalkIntoABank.html
@@ -40,7 +40,7 @@ Writer: Matthew Rosenberg
 </div></div>
 
 </p><p>
-Matthew Rosenberg and Tyler Boss’ wildly inventive and fearless tale of adolescents facing adult realities shipped just two of its five issues in 2017, but we can’t deny how well the creative team stuck the landing. The book thrives off sharp characterization, coupled with Tyler Boss’ pin-point facial expressions and hilarious fantasy sequences, and an impending darkness lurking behind it all. 
+Matthew Rosenberg and Tyler Boss’ wildly inventive and fearless tale of adolescents facing adult realities. We can’t deny how well the creative team stuck the landing. The book thrives off sharp characterization, coupled with Tyler Boss’ pin-point facial expressions and hilarious fantasy sequences, and an impending darkness lurking behind it all. 
 </p><p>
 Within this mini-series from publisher Black Mask, childhood friends Paige, Pat, Berger and Walter hatch a plan to steal cash to pay off a group of thieves intimidating Paige’s father. The inherent clever oozing out of these panels is breathy and rhythmic, probably obscuring the fact that this work was meticulous labor that took years to complete. Like a gorgeous remix of ‘80s nostalgia art directed by visual icon Saul Bass, 4 Kids Walk Into a Bank ultimately ventured into our hearts.
 </p>
