--- a/100Bullets/100Bullets.html
+++ b/100Bullets/100Bullets.html
@@ -2,22 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>100 Bullets</title>
 </head>
 
 <body>
-<h2>100 Bullets</h2>
-<img src="100Bullets001.jpg"><br>
-Series:100 issues <br>
-Publisher: 1999-2009 by Vertigo <br>
+<img src="100BulletsTPB1.jpg"><br>
+100 issues, 1999-2009 by Vertigo <br>
 Illustrator: Eduardo Risso<br>
 Writer: Brian Azzarello
 <p>
-About:<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="100Bullets001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="100Bullets010.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 The comic book won the Eisner and Harvey Awards. There are thirteen trade paperbacks in publication for this series. The titles of the trade paperbacks are related with their volume number (First Shot, Last Call; Split Second Chance; A Foregone Tomorrow; The Counterfifth Detective; Six Feet Under the Gun; Strychnine Lives; Decayed (a pun on 'decade'; this is the tenth volume)), with four being indirect references (book 7 titled Samurai, for Seven Samurai; book 8 titled The Hard Way, a reference to a roll in craps; book 12 titled Dirty, as in The Dirty Dozen; book 13 titled Wilt, for basketball player Wilt Chamberlain, who wore the number 13 and was famous for scoring 100 points in a single game). Book 11 Once Upon a Crime is also a reference as "once" is Spanish for eleven. 
 </p><p>
-Story:<br>
 100 Bullets starts out with the question of people willing to act on the desire of violent revenge if given the means, opportunity, and a reasonable chance to succeed. Many of the first issues involve the mysterious Agent Graves approaching someone who has been a victim of a terrible wrong. Graves gives them the opportunity to take revenge by providing a handgun, 100 bullets, and documentation about the primary target responsible for their woes. He informs the candidate the bullets are completely untraceable by any law enforcement investigation, and as soon as they are found at any crime scene, investigations will immediately cease.
 </p><p>
 Agent Graves is the leader of a group known as The Minutemen, a group of seven men (plus one "Agent") who serve as the enforcers and police of a clandestine organization known as The Trust. The Trust was originally formed by the heads of 13 powerful European families who controlled much of the Old World's combined wealth and industry. The Trust made an offer to the kings of Europe by which they would leave the continent and their considerable influence and holdings, in exchange for complete autonomy in the still unclaimed portion of the New World.
