--- a/AmericanFlagg/AmericanFlagg.html
+++ b/AmericanFlagg/AmericanFlagg.html
@@ -10,7 +10,7 @@
 <body>
 <img src="AmericanFlagg01.jpg"><br>
 Series: 50 issues 1983 - 1989 by First Comics<br>
-Writer &anp; Illustrator: Howard Chaykin<br>
+Writer &amp; Illustrator: Howard Chaykin<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
