--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -9,8 +9,8 @@
 
 <body>
 <img src="AdventureComics032.jpg"><br>
-Series: 472 issues (#32-503) 1938 - 1983.<br>
-<a href="https://blzimg.github.io/NewComics/NewComics.html"> Numbering begins with #1-11 New Comics then #12-31 New Adventure Comics</a><br>
+Series: 472 issues (#32-503) 1938-1983<br>
+Numbering begins with #1-11 <a href="https://blzimg.github.io/NewComics/NewComics.html">New Comics</a> then #12-31 New Adventure Comics</a><br>
 Publisher: National Allied, DC <br>
 <p>
 <div class="row"><div class="column">
