--- a/Fear/fear.html
+++ b/Fear/fear.html
@@ -2,22 +2,63 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Fear</title>
 </head>
 
 <body>
-<h2>Fear</h2>
-<img src="Fear001.jpg"> <img src="Fear010.jpg"><br>
-Series: #1-9 Fear, #10-31 Adventure Into Fear, monthly<br>
-Illustrator: Jack Kirby, Marie Severin, Howard Chaykin <br>
-Writer: Stan Lee<br>
-Publisher: 1970 Marvel <br>
+<img src="Fear001.jpg"><br>
+#1-9 Fear, #10-31 Adventure Into Fear, 1970-1975 Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Fear001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fear031.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 About: American horror comic book series published by Marvel Comics from November 1970 through December 1975, for 31 issues. This is its trademarked cover title for all but its first nine issues, though the series is copyrighted in its postal indicia as simply Fear.<br>
 </p><p>
-Story: <br>
-#1 I Found Monstrom the Dweller in the Black Swamp!: An alien emperor of an immortal race comes to Earth disguised as a human to decide whether or not to order an invasion. He is impressed with the humans' decency and falls in love with a human girl, calling off the invasion and giving up immortality to stay with her.
+Issue #1: I Found Monstrom the Dweller in the Black Swamp!: An alien emperor of an immortal race comes to Earth disguised as a human to decide whether or not to order an invasion. He is impressed with the humans' decency and falls in love with a human girl, calling off the invasion and giving up immortality to stay with her.
 </p><p>
 #10 Cry Monster: The Man-Thing discovers an infant being abandoned in the swamp, prompting it to seek retribution for the heinous act.
 
