--- a/AdventureIntoMystery/adventureintomystery.html
+++ b/AdventureIntoMystery/adventureintomystery.html
@@ -2,17 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Adventure Into Mystery</title>
 </head>
 
 <body>
-<h2>Adventure Into Mystery</h2>
 <img src="adventureintomystery001.jpg"><br>
-Series: 8 issues <br>
-Publisher: 1956 -1957 Atlas, Marvel
+8 issues 1956 -1957 Atlas, Marvel
 <p>
-About: SF/Horror anthology. This series was one of eight SF anthologies launched or revived in an eight-month period (cover dates October 1955–June 1956), increasing Atlas's SF line from eight to sixteen books. This book ran until the collapse of Atlas's distributor and the subsequent restructuring known as the "Atlas Implosion".
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventureintomystery008.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+Science Fiction Horror anthology. This series was one of eight SF anthologies launched or revived in an eight-month period (cover dates October 1955–June 1956), increasing Atlas's SF line from eight to sixteen books. This book ran until the collapse of Atlas's distributor and the subsequent restructuring known as the "Atlas Implosion".
 <p>
 Issue#1:<ul>
 <li>Future...Tense! Cover by John Forte, inks by Bill Everett, art by Bob Forgione.</li>
